@@ -33,3 +33,5 @@ Contributors:
         - patch to enable support for windows using mingw32
     - Donald Davis
         - patch with new AVR devices & testing of support for the devices
+    - Brad Schick
+        - identified that the flash memory overlaps the bootloader memory
